# simplon_cicd

./: .pre-commit-config.yaml  CHANGELOG.md  PROBLEMES_DETECTES.md  README.md  VEILLE_CICD.md  comparatif_outils.md  env.example  pyproject.toml
.github/workflows/: autopr.yml  ci.yml  cicd.yml
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
tests/: conftest.py  test_database.py  test_items_root.py  test_items_service.py  test_main.py  test_models.py
