[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.5.2",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Ignorer B008 uniquement dans les routes FastAPI
"app/routes/*.py" = ["B008"]
"app/main.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --cov=app --cov-report=term-missing"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["app/__init__.py:__version__"]
build_command = ""
major_on_zero = true
tag_format = "v{version}"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release\n\n[skip ci]"
commit_parser = "conventional"  # Changé de "angular" à "conventional"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true